combined read depth graph

--- a/presentations/2019-01-18-bsm-wip/2019-01-18-bsm-wip.tex
+++ b/presentations/2019-01-18-bsm-wip/2019-01-18-bsm-wip.tex
@@ -16,7 +16,7 @@
 
 % beamer styles
 \mode<presentation>{
-\usetheme{Frankfurt}
+\usetheme{Madrid}
 %\usetheme{Antibes}
 \usecolortheme{beaver}
 %\usecolortheme{seahorse}
@@ -32,10 +32,10 @@
 %\useoutertheme[]{tree}
 
 % title, etc
-\title{Somatic Mutations in the Human Brain from NGS data}
-%\subtitle{A subtitle may be shorter and more technical}
-\author{Attila Guly\'{a}s-Kov\'{a}cs, Chaggai Rosenbluh, Andy Chess}
-\date{Chess Lab}
+\title[Somatic Mutations in the Brain]{Somatic Mutations in the Human Brain from NGS data}
+\subtitle{A subtitle may be shorter and more technical}
+\author{Attila Guly\'{a}s-Kov\'{a}cs/Jones}
+\date{C.~Rosenbluh, A.~Chess}
 
 \begin{document}
 
@@ -58,14 +58,11 @@
 \end{frame}
 
 \begin{frame}
-\includegraphics[width=1.0\textwidth]{figures/from-others/bsm-science-fig1.jpg}
+\includegraphics[height=0.8\textheight]{figures/from-others/bsm-science-fig1.jpg}
 \end{frame}
 
 \begin{frame}[label=bsm-methods]{Sequencing approaches to detect somatic variants}
 \includegraphics[width=1.0\textwidth]{figures/from-others/bsm-science-fig2.jpg}
-\end{frame}
-
-\begin{frame}{Sequencing approaches to detect somatic variants}
 \end{frame}
 
 \begin{frame}{Proposed functional validation}
@@ -95,7 +92,7 @@
 \againframe{bsm-methods}
 
 \begin{frame}[label=data-quantity]{Samples and NGS data}
-\includegraphics[width=0.7\columnwidth]{figures/2017-05-24-alignment-stats/depth-hist-1.pdf}
+\includegraphics[height=0.85\textheight]{figures/2017-05-24-alignment-stats/combined-depth-plot-1.png}
 \end{frame}
 
 \begin{frame}{Ongoing analyses}
