--- a/notebook/2017-05-24-alignment-stats/2017-05-24-alignment-stats.Rmd
+++ b/notebook/2017-05-24-alignment-stats/2017-05-24-alignment-stats.Rmd
@@ -79,6 +79,9 @@ depth.plot(rd.genome, nonchromosomes, chromosomal = FALSE, scales = list(x = lis
 depth.plot(rd.genome, nonchromosomes, chromosomal = FALSE, ylim = c(0, 1000), scales = list(x = list(rot = 90)))
 ```
 
+
 ## Figures for presentations
 
-
+```{r combined-depth-plot, fig.asp=0.7}
+combined.depth.plot(x = rd.g, y = depth.hist, sel.contig.ix = c(22, 23, 24))
+```
