before merge from ada

--- a/notebook/2019-02-08-MSSM_106-depth/2019-02-08-MSSM_106-depth.md
+++ b/notebook/2019-02-08-MSSM_106-depth/2019-02-08-MSSM_106-depth.md
@@ -8,28 +8,23 @@ tags: [ alignment, depth, coverage ]
 Read depth is presented for the three samples from control individual MSSM_106.
 
 
-```{r echo=FALSE, warning=FALSE}
-library(lme4)
-library(lattice)
-library(latticeExtra)
-opts_chunk$set(dpi = 144)
-opts_chunk$set(out.width = "700px")
-opts_chunk$set(dev = c("png", "pdf"))
-lattice.options(default.args = list(as.table = TRUE))
-lattice.options(default.theme = "standard.theme")
-source("../2017-05-24-alignment-stats/2017-05-24-alignment-stats.R")
-```
 
-```{r cache=TRUE}
+
+
+```r
 tissues <- c("NeuN_pl", "NeuN_mn", "muscle")
 chromosomes <- c(as.character(1:22), "X", "Y", "MT")
 fai <- get.fai("/big/data/refgenome/GRCh37/hs37d5/hs37d5.fa.fai")
 ```
 
-```{r cache=TRUE}
+
+```r
 rd <- get.read.depths(fai = fai, tissues = tissues, prefix = "~/projects/bsm/results/2019-02-08-MSSM_106-depth/MSSM_106_")
 ```
 
-```{r depth-plot, fig.asp=0.7}
+
+```r
 horiz.depth.plot(rd, sel.contigs=c("22", "X", "Y"))
 ```
+
+<img src="figure/depth-plot-1.png" title="plot of chunk depth-plot" alt="plot of chunk depth-plot" width="700px" />
