--- a/presentations/2019-01-18-bsm-wip/2019-01-18-bsm-wip.tex
+++ b/presentations/2019-01-18-bsm-wip/2019-01-18-bsm-wip.tex
@@ -104,12 +104,14 @@
 \begin{columns}[t]
 \begin{column}{0.5\textwidth}
 
-\includegraphics[width=1.0\columnwidth]{figures/2018-11-06-number-of-calls/snvs-cs-1.pdf}
+\includegraphics<1-2>[width=1.0\columnwidth]{figures/2018-10-26-MSSM106-control-indiv/call-set-size-snvs-1.pdf}
+\includegraphics<3>[width=1.0\columnwidth]{figures/2018-10-26-MSSM106-control-indiv/call-set-size-snvs-2.pdf}
 \end{column}
 
 \begin{column}{0.6\textwidth}
 
-\includegraphics<2>[width=1.0\columnwidth]{figures/2018-04-08-call-set-concordance/venn-common-sample-wgs-snvs-1.pdf}
+\includegraphics<2>[width=1.0\columnwidth]{figures/2018-10-26-MSSM106-control-indiv/venn-snvs-1.pdf}
+\includegraphics<3>[width=1.0\columnwidth]{figures/2018-10-26-MSSM106-control-indiv/venn-snvs-PASS-1.pdf}
 \end{column}
 \end{columns}
 \end{frame}
