Most of the text for wip written

--- a/notebook/2019-02-08-MSSM_106-depth/2019-02-08-MSSM_106-depth.Rmd
+++ b/notebook/2019-02-08-MSSM_106-depth/2019-02-08-MSSM_106-depth.Rmd
@@ -35,5 +35,5 @@ horiz.depth.plot(rd, sel.contigs=c("22", "X", "Y"))
 ```
 
 ```{r depth-plot-X, fig.asp=1.2, fig.width=4}
-horiz.depth.plot(rd, sel.contigs=c("X"))
+horiz.depth.plot(rd, sel.contigs=c("X", "Y"))
 ```
